fixed search page logic, added filter logic. not finally